# VNTrading_homework

./: README.md  main.py  pyproject.toml
inputs/: BTCUSDT_price_data_2024-01-24.csv
outputs/: Summary Report.docx
src/: task1.py  utils.py
